add map endpoints
