# anxiety/internal/models/map.ts
@@ -1,0 +1,34 @@
+export interface IMapItemModel {
+  id: number;
+  type:
+    | "weather_flood"
+    | "weather_storm"
+    | "weather_disaster"
+    | "street_closure"
+    | "street_report"
+    | "police"
+    | "air_quality"
+    | "radiation";
+  severity: "information" | "warning" | "danger" | "extreme_danger";
+  title: string;
+  position: {
+    lat: number;
+    lon: number;
+  };
+  area: number[] | number;
+  since: number;
+}
+
+export interface IMapItemDetailsModel {
+  id: number;
+  type:
+    | "weather_flood"
+    | "weather_storm"
+    | "weather_disaster"
+    | "street_closure"
+    | "street_report"
+    | "police"
+    | "air_quality"
+    | "radiation";
+  details: object;
+}
